--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "to-do",
-  "homepage": "https://Pawar-Pratik.github.io/React-ToDo ",
+  "homepage": "https://pawar-pratik.github.io/React-ToDo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
